--- a/dalcshub-api/package.json
+++ b/dalcshub-api/package.json
@@ -14,5 +14,8 @@
     "express": "^4.18.2",
     "mongoose": "^7.4.0",
     "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "prettier": "^3.0.0"
   }
 }
